<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/machine_data"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>

        <LinearLayout
            android:id="@+id/id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/machine_id_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/primary"/>

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/secondary"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_name_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:maxLines="1"
            android:hint="@string/insert_machine_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_type_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:maxLines="1"
            android:hint="@string/insert_machine_type"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_code_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/insert_machine_code"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_maintenance"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/last_mt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_calendar"
            android:maxLines="1"
            android:hint="@string/click_to_show_datepicker"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/machine_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/machine_image"
            android:textColor="@color/white"
            android:background="@color/primary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_image_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/primary"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>